2001-11-09  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Don't
	unref the archive and the location here; they will be unreffed
	when the archiver_db object is destroyed

	* location.c (location_destroy): Prevent reentrance

	* archive.c (archive_destroy): Don't traverse the tree
	(archive_destroy): Prevent reentrance

2001-11-02  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_destroy): Keep
	the object around during destroy in order to prevent reentrance

2001-10-18  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (get_listener_oafiid): Update listener name

2001-10-13  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (real_sync): Try to resolve a listener
	to make sure that something is listening when we issue the sync
	event (disabled for now)
	(get_listener_oafiid): Implement (disabled for now)

2001-10-05  Shaun Merrigan  <shaun.merrigan@sun.com>

	* archiver-client.c (location_client_load_rollback_data):
	Only use tm_gmtoffm if __USE_BSD is defined.

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* config-log.c (parse_line): Only set tm_gmtoff and tm_zone fields
	if __USE_BSD is defined

	* util.c (parse_date): Ditto

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Store the
	listener id in the archiver_db structure
	(bonobo_config_archiver_destroy): Remove the event source
	listener; destroy the XML cache
	(new_rollback_cb): Don't reload everything if we initiated the
	sync ourselves
	(real_sync): Mark that we are currently up to date

2001-09-22  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (notify_listeners): Abort if the object
	is already destroyed

2001-09-07  Bradford Hovinen  <hovinen@ximian.com>

	* archiver-client.c (location_client_store_xml): Make backend_id
	const

	* util.c (parse_date): Set the time zone
	(parse_date): Initialize tm_isdst
