@@ -1,3 +1,12 @@
+2001-11-16  Bradford Hovinen  <hovinen@ximian.com>
+
+	* bonobo-moniker-archiver.c (archiverdb_resolve): Update based on
+	changes to bonobo_config_archiver_new
+
+	* bonobo-config-archiver.c (bonobo_config_archiver_new): Use a
+	GHashTable for the archiver db cache rather than the borken bonobo
+	URL API. Return a pointer rather than an objref
+
 2001-11-09  Bradford Hovinen  <hovinen@ximian.com>
 
 	* bonobo-config-archiver.c (bonobo_config_archiver_new): Don't
